--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 [Mm]emoryCaptures/
 
 # Never ignore Asset meta data
-!/[Aa]ssets/**/*.meta
+#!/[Aa]ssets/**/*.meta
+.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -44,9 +45,9 @@ ExportedObj/
 *.VC.db
 
 # Unity3D generated meta files
-*.pidb.meta
-*.pdb.meta
-*.mdb.meta
+.pidb.meta
+.pdb.meta
+.mdb.meta
 
 # Unity3D generated file on crash reports
 sysinfo.txt
@@ -57,4 +58,3 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
